--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
-click==7.1.2
-Flask==1.1.2
+asttokens==2.0.8
+backcall==0.2.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+debugpy==1.6.3
+decorator==5.1.1
+entrypoints0.4
+executing==0.10.0
+Flask==2.2.2
+Flask-MySQL==1.5.2
+Flask-MySQLdb==1.0.1
+idna==3.3
+ipykernel==6.15.1
+ipython==8.4.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+jupyter-client 7.3.4
+wcwidth==0.2.5
+Werkzeug==2.2.2
 gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
 MarkupSafe==1.1.1
-Werkzeug==1.0.1
